fix: gap

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 
 .lineup-text {
   display: inline-flex;
-  gap: 39px;
+  gap: 72px;
   font-size: 48px;
   font-weight: 600;
   white-space: nowrap;
